sfSandBoxCode/force-app/main/default/objects/Opportunity_Promary_salesperson__c/Opportunity_Promary_salesperson__c.object-meta.xml
<CustomObject>
    <label>Opportunity Primary salesperson</label>
    <nameField>
        <displayFormat>OPS-{000000}</displayFormat>
        <label>Opportunity Primary salesperson Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Primary salespersons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>