sfSandBoxCode/force-app/main/default/objects/Opportunity_Promary_salesperson__c/fields/Current_Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Current_Salesperson__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Salesperson</label>
    <type>Checkbox</type>
</CustomField>