sfSandBoxCode/force-app/main/default/objects/Opportunity_Promary_salesperson__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Primary salespersons</relationshipLabel>
    <relationshipName>Opportunity_Primary_salespersons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>