sfSandBoxCode/force-app/main/default/objects/Opportunity_Promary_salesperson__c/fields/Primary_Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Primary_Salesperson__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Salesperson</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Primary salespersons</relationshipLabel>
    <relationshipName>Opportunity_Primary_salespersons</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>